Fix some issues with the scrollbar being inaccessible

--- a/src/scss/section/_main.scss
+++ b/src/scss/section/_main.scss
@@ -170,7 +170,8 @@
     background: rgba(255,255,255,0.1);
     position: relative;
     overflow: auto;
-    padding: 0.325rem 0.325rem 0.325rem 0;
+    padding: 0.325rem 0;
+    margin-right: 0.325rem;
 
     &:before {
         content: "";
